added new notes

--- a/Machine-Learning-Books/Applied-ML-Explainability/SHAP.ipynb
+++ b/Machine-Learning-Books/Applied-ML-Explainability/SHAP.ipynb
@@ -53,8 +53,15 @@
     "\n",
     "#### Now that we have an intuitive understanding of Shapley values and we have learned how to calculate Shapley values, we should also gain an understanding of the properties of Shapley values:\n",
     "- Efficiency: The total sum of Shapley values or the marginal contribution of each feature should be equal to the value of the total coalition. For example, in Figure 6.4, we can see that sum of individual Shapley values for Alice, Bob, and Charlie are equal to the total coalition value obtained when Alice, Bob, and Charlie team up together.\n",
-    "- "
+    "- Symmetry: Each player has a fair chance of joining the game in any order. in Figure 6.4, we can see that all permutations of the sequences for all the players are considered.\n",
+    "- Dummy: If a particular feature does not change the predicted value regardless of the coalition group, then the Shapley value for the feature is 0.\n",
+    "- Additivity: For any game with a combined payout, the Shapley values are also combined. For example, for the random forest algorithm in ML, Shapley values can be calculated for a particular feature by calculating it for each individual tree and then averaging them to find the additive Shapley value for the entire random forest."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
