added new imports

--- a/Machine-Learning-Books/Hands-On-Xgboost/Decision-Trees.ipynb
+++ b/Machine-Learning-Books/Hands-On-Xgboost/Decision-Trees.ipynb
@@ -22,7 +22,35 @@
     "\n",
     "## max_leaf_nodes\n",
     "\n",
-    "#### max_leaf_nodes is similar to min_samples_leaf. Instead of specifying the number of samples per leaf, it specifies the total number of leaves. So, max_leaf_nodes=10 means that the model cannot have more than 10 leaves. It could have fewer."
+    "#### max_leaf_nodes is similar to min_samples_leaf. Instead of specifying the number of samples per leaf, it specifies the total number of leaves. So, max_leaf_nodes=10 means that the model cannot have more than 10 leaves. It could have fewer.\n",
+    "\n",
+    "## max_features\n",
+    "#### max_features is an effective hyperparameter for reducing variance. Instead of considering every possible feature for a split, it chooses from a select number of features each round.\n",
+    "\n",
+    "### It's standard to see max_features with the following options:\n",
+    "- 'auto' is the default, which provides no limitations.\n",
+    "- 'sqrt' is the square root of the total number of features.\n",
+    "- 'log2' is the log of the total number of features in base 2. 32 columns resolves to 5 since 2 ^5 = 32.\n",
+    "\n",
+    "## min_samples_split\n",
+    "\n",
+    "#### Another splitting technique is min_samples_split. As the name indicates, min_samples_split provides a limit to the number of samples required before a split can be made. The default is 2, since two samples may be split into one sample each, ending as single leaves. If the limit is increased to 5, no further splits are permitted for nodes with five samples or fewer.\n",
+    "\n",
+    "## splitter\n",
+    "\n",
+    "#### There are two options for splitter, 'random' and 'best'. Splitter tells the model how to select the feature to split each branch. The 'best' option, the default, selects the feature that results in the greatest gain of information. The 'random' option, by contrast, selects the split randomly. Changing splitter to 'random' is a great way to prevent overfitting and diversify trees.\n",
+    "\n",
+    "## criterion\n",
+    "\n",
+    "#### The criterion for splitting decision tree regressors and classifiers are different. The criterion provides the method the machine learning model uses to determine how splits should be made. It's the scoring method for splits. For each possible split, the criterion calculates a number for a possible split and compares it to other options. The split with the best score wins.\n",
+    "\n",
+    "#### The options for decision tree regressors are mse (mean squared error), friedman_mse, (which includes Friedman's adjustment), and mae (mean absolute error). The default is mse.  \n",
+    "\n",
+    "#### For classifiers, gini, which was described earlier, and entropy usually give similar results.\n",
+    "\n",
+    "## min_impurity_decrease\n",
+    "\n",
+    "#### Previously known as min_impurity_split, min_impurity_decrease results in a split when the impurity is greater than or equal to this value. Impurity is a measure of how pure the predictions are for every node. A tree with 100% accuracy would have an impurity of 0.0. A tree with 80% accuracy would have an impurity of 0.20."
    ]
   }
  ],
