added new imports

--- a/Machine-Learning-Books/Hands-On-Xgboost/Decision-Trees.ipynb
+++ b/Machine-Learning-Books/Hands-On-Xgboost/Decision-Trees.ipynb
@@ -50,8 +50,21 @@
     "\n",
     "## min_impurity_decrease\n",
     "\n",
-    "#### Previously known as min_impurity_split, min_impurity_decrease results in a split when the impurity is greater than or equal to this value. Impurity is a measure of how pure the predictions are for every node. A tree with 100% accuracy would have an impurity of 0.0. A tree with 80% accuracy would have an impurity of 0.20."
+    "#### Previously known as min_impurity_split, min_impurity_decrease results in a split when the impurity is greater than or equal to this value. Impurity is a measure of how pure the predictions are for every node. A tree with 100% accuracy would have an impurity of 0.0. A tree with 80% accuracy would have an impurity of 0.20.\n",
+    "\n",
+    "## min_weight_fraction_leaf\n",
+    "\n",
+    "#### min_weight_fraction_leaf is the minimum weighted fraction of the total weights required to be a leaf. According to the documentation, Samples have equal weight when sample_weight is not provided. For practical purposes, min_weight_fraction_leaf is another hyperparameter that reduces variance and prevents overfitting. The default is 0.0. Assuming equal weights, a restriction of 1%, 0.01, would require at least 5 of the 500 samples to be a leaf. \n",
+    "\n",
+    "## Tip\n",
+    "\n",
+    "#### There are too many decision tree hyperparameters to consistently use them all. In my experience, max_depth, max_features, min_samples_leaf, max_leaf_nodes, min_impurity_decrease, and min_samples_split are often sufficient."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
