added new imports

--- a/Machine-Learning-Books/Hands-On-Xgboost/Decision-Trees.ipynb
+++ b/Machine-Learning-Books/Hands-On-Xgboost/Decision-Trees.ipynb
@@ -58,7 +58,14 @@
     "\n",
     "## Tip\n",
     "\n",
-    "#### There are too many decision tree hyperparameters to consistently use them all. In my experience, max_depth, max_features, min_samples_leaf, max_leaf_nodes, min_impurity_decrease, and min_samples_split are often sufficient."
+    "#### There are too many decision tree hyperparameters to consistently use them all. In my experience, max_depth, max_features, min_samples_leaf, max_leaf_nodes, min_impurity_decrease, and min_samples_split are often sufficient.\n",
+    "\n",
+    "\n",
+    "## Narrowing the range\n",
+    "\n",
+    "#### Narrowing the range is one strategy to improve hyperparameters.\n",
+    "#### As an example, using a baseline of max_depth=8 chosen from the best model, we may narrow the range to from 7 to 9.\n",
+    "#### Another strategy is to stop checking hyperparameters whose defaults are working fine. entropy, for instance, is not recommended over 'gini' as the differences are very slight. min_impurity_split and min_impurity_decrease may also be left at their defaults."
    ]
   },
   {
