added new imports

--- a/Machine-Learning-Books/Hands-On-Xgboost/Boosting-GBC-XGB.ipynb
+++ b/Machine-Learning-Books/Hands-On-Xgboost/Boosting-GBC-XGB.ipynb
@@ -13,7 +13,8 @@
    "source": [
     "## Boosting\n",
     "\n",
-    "#### Boosting, by contrast, learns from the mistakes of individual trees. The general idea is to adjust new trees based on the errors of previous trees."
+    "#### Boosting, by contrast, learns from the mistakes of individual trees. The general idea is to adjust new trees based on the errors of previous trees.\n",
+    "#### Gradient boosting computes the residuals of each tree's predictions and sums all the residuals to score the model."
    ]
   }
  ],
