added new imports

--- a/Machine-Learning-Books/Hands-On-Xgboost/Boosting-GBC-XGB.ipynb
+++ b/Machine-Learning-Books/Hands-On-Xgboost/Boosting-GBC-XGB.ipynb
@@ -14,7 +14,9 @@
     "## Boosting\n",
     "\n",
     "#### Boosting, by contrast, learns from the mistakes of individual trees. The general idea is to adjust new trees based on the errors of previous trees.\n",
-    "#### Gradient boosting computes the residuals of each tree's predictions and sums all the residuals to score the model."
+    "#### Gradient boosting computes the residuals of each tree's predictions and sums all the residuals to score the model.\n",
+    "\n",
+    "#### The learning_rate, the most important gradient boosting hyperparameter, with the possible exception of n_estimators, the number of iterations or trees in the model. We will also survey some tree hyperparameters, and subsample, which results in stochastic gradient boosting. In addition, we will use RandomizedSearchCV and compare results with XGBoost."
    ]
   }
  ],
