added new imports

--- a/Machine-Learning-Books/Hands-On-Xgboost/Boosting-GBC-XGB.ipynb
+++ b/Machine-Learning-Books/Hands-On-Xgboost/Boosting-GBC-XGB.ipynb
@@ -16,7 +16,18 @@
     "#### Boosting, by contrast, learns from the mistakes of individual trees. The general idea is to adjust new trees based on the errors of previous trees.\n",
     "#### Gradient boosting computes the residuals of each tree's predictions and sums all the residuals to score the model.\n",
     "\n",
-    "#### The learning_rate, the most important gradient boosting hyperparameter, with the possible exception of n_estimators, the number of iterations or trees in the model. We will also survey some tree hyperparameters, and subsample, which results in stochastic gradient boosting. In addition, we will use RandomizedSearchCV and compare results with XGBoost."
+    "#### The learning_rate, the most important gradient boosting hyperparameter, with the possible exception of n_estimators, the number of iterations or trees in the model. We will also survey some tree hyperparameters, and subsample, which results in stochastic gradient boosting. In addition, we will use RandomizedSearchCV and compare results with XGBoost.\n",
+    "\n",
+    "#### learning_rate, also known as the shrinkage, shrinks the contribution of individual trees so that no tree has too much influence when building the model. If an entire ensemble is built from the errors of one base learner, without careful adjustment of hyperparameters, early trees in the model can have too much influence on subsequent development. learning_rate limits the influence of individual trees. Generally speaking, as n_estimators, the number of trees, goes up, learning_rate should go down.\n",
+    "\n",
+    "\n",
+    "## Base learner\n",
+    "\n",
+    "#### The initial decision tree in the gradient boosting regressor is called the base learner because it's at the base of the ensemble. It's the first learner in the process. The term learner here is indicative of a weak learner transforming into a strong learner.\n",
+    "\n",
+    "## subsample\n",
+    "\n",
+    "#### subsample is a subset of samples. Since samples are the rows, a subset of rows means that all rows may not be included when building each tree. By changing subsample from 1.0 to a smaller decimal, trees only select that percentage of samples during the build phase. For example, subsample=0.8 would select 80% of samples for each tree.\n"
    ]
   }
  ],
