added new imports

--- a/Machine-Learning-Books/Hands-On-Xgboost/XGBoost-Unveiled.ipynb
+++ b/Machine-Learning-Books/Hands-On-Xgboost/XGBoost-Unveiled.ipynb
@@ -20,6 +20,20 @@
     "- Block compression and sharding\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ![](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/xgb-boost-params.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/xgb-boost-params.jpg)"
+   ]
   }
  ],
  "metadata": {
