added new imports

--- a/Machine-Learning-Books/Hands-On-Xgboost/XGBoost-Unveiled.ipynb
+++ b/Machine-Learning-Books/Hands-On-Xgboost/XGBoost-Unveiled.ipynb
@@ -62,7 +62,16 @@
     "## Early Stopping\n",
     "#### For XGBoost, early_stopping_rounds is the key parameter for applying early stopping. If early_stopping_rounds=10, the model will stop training after 10 consecutive training rounds fail to improve the model. Similarly, if early_stopping_rounds=100, training continues until 100 consecutive rounds fail to improve the model.\n",
     "\n",
-    "#### eval_metric and eval_set may be used as parameters for .fit to generate test scores for each training round. eval_metric provides the scoring method, commonly 'error' for classification, and 'rmse' for regression. eval_set provides the test to be evaluated, commonly X_test and y_test."
+    "#### eval_metric and eval_set may be used as parameters for .fit to generate test scores for each training round. eval_metric provides the scoring method, commonly 'error' for classification, and 'rmse' for regression. eval_set provides the test to be evaluated, commonly X_test and y_test.\n",
+    "\n",
+    "#### dart provides a compelling option within the XGBoost framework. Since dart accepts all gbtree hyperparameters, it's easy to change the base learner from gbtree to dart when modifying hyperparameters. In effect, the advantage is that you can experiment with new hyperparameters including one_drop, rate_drop, normalize, and others to see if you can make additional gains. dart is definitely worth trying as a base learner in your research and model-building with XGBoost."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data leakage occurs when information between training and test sets, or predictor and target columns, are shared. The risk here is that the target column is being directly used to influence the predictor columns, which is generally a bad idea in machine learning. Nevertheless, mean encoding has been shown to produce outstanding results. It can work when datasets are deep, and the distribution of mean values are approximately the same for incoming data. Regularization is an extra precaution taken to reduce the possibility of overfitting."
    ]
   },
   {
