added new visual

--- a/Mathematics/Statistics/Statistical-Models/Parametric.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Parametric.ipynb
@@ -105,7 +105,265 @@
    "source": [
     "## Anderson-Darling\n",
     "\n",
-    "#### Similar to the Kolmogorov-Smirnov test, the Anderson-Darling test measures a given distribution against a normally distributed distribution. In scipy’s anderson test, we can test against other distributions, but the default argument specifying a normal distribution, dist=\"norm\", assumes a null hypothesis that the given distribution is statistically the same as a normally distributed distribution. For each distribution tested against, a different set of critical values must be calculated."
+    "#### Similar to the Kolmogorov-Smirnov test, the Anderson-Darling test measures a given distribution against a normally distributed distribution. In scipy’s anderson test, we can test against other distributions, but the default argument specifying a normal distribution, dist=\"norm\", assumes a null hypothesis that the given distribution is statistically the same as a normally distributed distribution. For each distribution tested against, a different set of critical values must be calculated.\n",
+    "\n",
+    "#### Note that while both the Anderson-Darling and Kolmogorov-Smirnov tests use the cumulative density frequency distributions to test for normality, the Anderson-Darling test is different from the Kolmogorov-Smirnov test because it weights the variance in the tails of the cumulative density frequency distribution more than the middle. This is because the variance in the tails can be measured in smaller increments than in the middle of the distribution. Consequently, the Anderson-Darling test is more sensitive to tails than the Kolmogorov-Smirnov test. In line with the Kolmogorov-Smirnov test, a test statistic is calculated and measured against a critical value. If the test statistic is larger than the critical value, the null hypothesis that the given distribution is normally distributed can be rejected at the specified level of significance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Test Statistic</th>\n",
+       "      <th>Critical Value</th>\n",
+       "      <th>Significance Level</th>\n",
+       "      <th>Normally Distributed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.65964</td>\n",
+       "      <td>0.574</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.65964</td>\n",
+       "      <td>0.653</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.65964</td>\n",
+       "      <td>0.784</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.65964</td>\n",
+       "      <td>0.914</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.65964</td>\n",
+       "      <td>1.088</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Test Statistic  Critical Value  Significance Level Normally Distributed\n",
+       "0         0.65964           0.574                15.0                   No\n",
+       "1         0.65964           0.653                10.0                   No\n",
+       "2         0.65964           0.784                 5.0                  Yes\n",
+       "3         0.65964           0.914                 2.5                  Yes\n",
+       "4         0.65964           1.088                 1.0                  Yes"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "mu, sigma = 19, 1.7\n",
+    "normally_distributed = np.random.normal(mu, sigma, 1000)\n",
+    "not_normally_distributed = np.exp(normally_distributed)\n",
+    "\n",
+    "\n",
+    "from scipy import stats\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "def anderson_test(data):\n",
+    "    data = np.array(data)\n",
+    "    test_statistic, critical_values, significance_levels = stats.anderson(normally_distributed, dist='norm')\n",
+    "    df_anderson = pd.DataFrame({'Test Statistic':np.repeat(test_statistic, len(critical_values)), 'Critical Value':critical_values, 'Significance Level': significance_levels})\n",
+    "    df_anderson.loc[df_anderson['Test Statistic'] >= df_anderson['Critical Value'], 'Normally Distributed'] = 'No'\n",
+    "    df_anderson.loc[df_anderson['Test Statistic'] <df_anderson['Critical Value'], 'Normally Distributed'] = 'Yes'\n",
+    "    return df_anderson;\n",
+    "mu, sigma = 19, 1.7\n",
+    "normally_distributed = np.random.normal(mu, sigma, 1000)\n",
+    "anderson_test(normally_distributed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Test Statistic</th>\n",
+       "      <th>Critical Value</th>\n",
+       "      <th>Significance Level</th>\n",
+       "      <th>Normally Distributed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.65964</td>\n",
+       "      <td>0.574</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.65964</td>\n",
+       "      <td>0.653</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.65964</td>\n",
+       "      <td>0.784</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.65964</td>\n",
+       "      <td>0.914</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.65964</td>\n",
+       "      <td>1.088</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Test Statistic  Critical Value  Significance Level Normally Distributed\n",
+       "0         0.65964           0.574                15.0                   No\n",
+       "1         0.65964           0.653                10.0                   No\n",
+       "2         0.65964           0.784                 5.0                  Yes\n",
+       "3         0.65964           0.914                 2.5                  Yes\n",
+       "4         0.65964           1.088                 1.0                  Yes"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "not_normally_distributed = np.exp(normally_distributed)\n",
+    "anderson_test(not_normally_distributed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Shapiro-Wilk\n",
+    "\n",
+    "#### The Shapiro-Wilk test is a goodness-of-fit test that checks whether a given distribution is normally distributed. The test checks how closely a distribution of observed values centered on 0 and scaled to a unit variance of 1 approximates an observed centered and scaled standard normal distribution. This centering and scaling (called standardizing) are performed within the function in the scipy.stats shapiro module, so input data does not need to be altered prior to testing. The level of significance for this test in scipy is 0.05.\n",
+    "\n",
+    "#### Shapiro-Wilk is ideal, compared to Kolmogorov-Smirnov and Anderson-Darling, for testing small sample sizes of roughly less than 50. However, one drawback is that since Shapiro-Wilk uses repeated sampling and testing for the calculated test statistic by applying Monte Carlo simulation, the law of large numbers poses a risk that as the sample size increases, there is an inherent increase in the risk of encountering a type II error (a loss of power) and failing to reject the null hypothesis, where the null hypothesis states the given distribution is normally distributed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ShapiroResult(statistic=0.9985997923837231, pvalue=0.620909698769699)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mu, sigma = 19, 1.7\n",
+    "normally_distributed = np.random.normal(mu, sigma, 1000)\n",
+    "stats.shapiro(normally_distributed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ShapiroResult(statistic=0.1964559639009531, pvalue=5.701007766361151e-54)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not_normally_distributed = np.exp(normally_distributed)\n",
+    "stats.shapiro(not_normally_distributed)"
    ]
   }
  ],
